--- a/qml.qrc
+++ b/qml.qrc
@@ -3,6 +3,8 @@
         <file>map.qml</file>
         <file>ui/BottomBar/BottomBar.qml</file>
         <file>ui/RightScreen/RightScreen.qml</file>
+        <file>ui/LeftScreen/LeftScreen.qml</file>
+        <file>ui/assets/marker.jpg</file>
     </qresource>
     <qresource prefix="/resources">
         <file>img/marker.jpg</file>
